--- a/main.css
+++ b/main.css
@@ -53,12 +53,6 @@ body {
   margin-left: auto;
 }
 
-/* Padding for spacing */
-.inner {
-  padding: 30px;
-}
-
-
 /*
  * Header
  */
@@ -132,7 +126,7 @@ body {
  * Affix and center
  */
 
-@media (min-width: 768px) {
+@media /* (min-width: 768px) */ {
   /* Pull out the header and footer */
   .masthead {
     position: fixed;
@@ -168,4 +162,13 @@ body {
 }
 .row:nth-child(even) {
     background: #404040;
+}
+
+#top {
+    background:#1E323F;
+    z-index: 1;
+    position: absolute;
+    padding: 15px 25px;
+    width:100%;
+    border-radius:15px;
 }
